# credarion

./: .gitignore  CLAUDE.md  PROGRESS.md  package-lock.json  package.json  render.yaml
backend/: .env.example  README.md  pyproject.toml  railway.json
backend/.next/: trace  trace-build
backend/.next/cache/: .previewinfo  .rscinfo
backend/app/: auth_deps.py  config.py  db.py  main.py  models.py  notifications.py  period_lock.py  periods.py  security.py
backend/app/ingestion/: cleaning.py  column_mapping.py  grn_ingestor.py  header_detection.py  statement_ingestor.py
backend/app/invoicing/: file_storage.py  ocr_extractor.py  schemas.py  supplier_matcher.py
backend/app/reconciliation/: __init__.py  aggregate_match.py  ai_match.py  exact_match.py  fuzzy_match.py  multi_delivery.py  multi_po_dn.py  normalization.py  orchestrator.py  schemas.py
backend/scripts/: recon_layer3_xfy201.py  seed_user.py  set_role.py
backend/tests/: conftest.py  role_helpers.py  test_aggregate_match.py  test_ai_match.py  test_auth.py  test_chat_tenant_isolation.py  test_config_security.py  test_escalations.py  test_exact_match.py  test_fuzzy_match.py  test_grn_ingestion.py  test_ingestion.py  test_invoice_api.py  test_invoice_ocr.py  test_mismatches_include_matches.py  test_multi_delivery.py  test_multi_po_dn.py  test_notifications.py  test_orchestrator.py  test_orchestrator_layer_order.py  test_period_lock.py  test_periods.py  test_recon_routing_stats.py  test_reconciliation_tenant_isolation.py  test_review_queue.py  test_roles.py  test_statements_tenant_isolation.py  test_users.py
(+94 files in other folders)
